--- a/FrontEnd/appsettings.json
+++ b/FrontEnd/appsettings.json
@@ -7,5 +7,8 @@
     }
   },
   "AllowedHosts": "*",
-  "ServiceUrl": "https://localhost:44347/"
+  "ServiceUrl": "https://localhost:44347/",
+  "ConnectionStrings": {
+    "IdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=FrontEnd;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
