--- a/FrontEnd/appsettings.json
+++ b/FrontEnd/appsettings.json
@@ -9,6 +9,6 @@
   "AllowedHosts": "*",
   "ServiceUrl": "https://localhost:44347/",
   "ConnectionStrings": {
-    "IdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=FrontEnd;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "IdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=ConferencePlanner;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
