Added Docker support

--- a/BackEnd/appsettings.json
+++ b/BackEnd/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ConferencePlanner;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=db;Initial Catalog=ConferencePlanner;User=sa;Password=ConferencePlanner1234$;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
