--- a/FrontEnd/appsettings.json
+++ b/FrontEnd/appsettings.json
@@ -7,8 +7,8 @@
     }
   },
   "AllowedHosts": "*",
-  "ServiceUrl": "https://localhost:44347/",
+  "serviceUrl": "http://backend/",
   "ConnectionStrings": {
-    "IdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=ConferencePlanner;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "IdentityDbContextConnection": "Server=db;Initial Catalog=ConferencePlannerFront;User=sa;Password=ConferencePlanner1234$;MultipleActiveResultSets=true"
   }
 }
